Fix single product img wrap border radius

--- a/src/styles/legacy/style.scss
+++ b/src/styles/legacy/style.scss
@@ -271,9 +271,9 @@ abbr[title] {
 .woocommerce-message,
 .woocommerce_error {
 	display: block;
-	margin-bottom: 30px;
-	border-style: solid;
-	border-width: 1px 1px 1px 4px;
+	margin-bottom: 20px;
+	border-left-style: solid;
+	border-left-width: 4px;
 	border-color: $color-grey;
 	padding: 20px 70px 20px 20px;
 	font-size: 14px;
